--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,9 +20,13 @@
   background-color: var(--accent-color);
 }
 
+.portfolio.container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .selection.list {
   display: flex;
-  padding-top: 94px;
   justify-content: center;
   margin-bottom: 50px;
 }
@@ -37,22 +41,26 @@
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
-  padding-bottom: 94px;
 }
 
 .portfolio.list .item {
   flex-basis: calc(100% / 3) - 30px;
   margin-left: 30px;
   margin-top: 30px;
+  width: 370px;
 }
 
 .card {
+  display: block;
   text-decoration: none;
   color: inherit;
 }
 
 .card-content {
+  background-color: var(--white-color);
   padding: 20px 24px;
+  border: 1px solid var(--option-light-color-b);
+  border-top: hidden;
 }
 
 .card-name {
