--- a/css/studio.css
+++ b/css/studio.css
@@ -53,6 +53,10 @@
   display: flex;
 }
 
+.advantages .item {
+  width: 270px;
+}
+
 .advantages.list .item + .item {
   margin-left: 30px;
 }
@@ -70,6 +74,10 @@
 }
 
 /* Operations */
+.operations.section .container {
+  padding-bottom: 94px;
+}
+
 .operations.list {
   display: flex;
   margin-top: 50px;
@@ -85,7 +93,6 @@
 }
 
 .team.section .container {
-  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -97,25 +104,28 @@
   text-align: center;
 }
 
-.team {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-}
-
 .team.list {
   display: flex;
   margin-top: 50px;
+}
+
+.team.list .item {
+  width: 270px;
 }
 
 .team.list .item + .item {
   margin-left: 30px;
 }
 
-.team.list .item h3 {
-  margin-top: 30px;
+.team-member {
+  background-color: var(--white-color);
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
-.team.list .item p {
+.team-member p {
   margin-top: 10px;
 }
