--- a/css/studio.css
+++ b/css/studio.css
@@ -74,7 +74,7 @@
 }
 
 /* Operations */
-.operations.section .container {
+.operations.section {
   padding-bottom: 94px;
 }
 
@@ -92,7 +92,7 @@
   background-color: var(--background-light-color);
 }
 
-.team.section .container {
+.team.section {
   padding-bottom: 94px;
 }
 
@@ -122,8 +122,7 @@
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 20px;
 }
 
 .team-member p {
